# tewi

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/tewi/: RegisterTable.h
src/: CMakeLists.txt  module.ixx  tewi.ixx
src/ast/: AstRenderer.cppm  AstRenderer.ixx  AstSpec.ixx  CompiledQuery.ixx
src/common/: FixedString.ixx  Log.h  Logging.cppm  Logging.ixx  NumberTypes.ixx  StringMap.ixx  TypeHelpers.ixx
src/engine/: SqliteConnection.cppm  SqliteConnection.ixx  SqliteError.ixx  SqliteMigration.cppm  SqliteMigration.ixx  SqliteStatement.cppm  SqliteStatement.ixx  SqliteTransaction.cppm  SqliteTransaction.ixx
src/orm/: BasicQuery.ixx  Column.ixx  Compare.ixx  Constraints.ixx  Index.ixx  JoinQuery.ixx  Order.ixx  OrmDatabase.ixx  Projection.ixx  QueryRange.ixx  Repository.ixx  RowHydrator.ixx  SelectQuery.ixx  Table.ixx  TableRegistry.ixx  TypeAdapter.ixx
src/orm/detail/: BaseTypeAdapters.ixx  ColumnHelpers.ixx  ConstraintHelpers.ixx  ForeignKeyHelpers.ixx  MemberTraits.ixx  PrimaryKeyHelpers.ixx  QueryState.ixx  TableHelpers.ixx
tests/: CMakeLists.txt  ColumnSchemaTests.cpp  CompositeKeyTests.cpp  CreateTableTests.cpp  LogInitializer.cpp  OrmDatabaseLifetimeTests.cpp  OrmTests.cpp  PrimaryKeyTests.cpp  QueryChainTests.cpp  TableMetaTests.cpp  TableRegistryTests.cpp  TableSchemaTests.cpp  Tables.h  TransactionTests.cpp  TypeAffinityTests.cpp
